--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<a href="#" class="image"><img src="images\spr_mrwzwxrys13.png" alt="" /></a>
+							<h2>Leiam Clements Portfolio</h2>
+							<p>Aka <a href="http://wzqxrys.itch.io">Wzqxrys</a></p>
 						</div>
 					</section>
 
@@ -57,7 +57,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
+										<h2 class="major">MyTime - A Spectacle in Time</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
