--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<a href="#" class="image"><img src="images\spr_mrwzwxrys13.png" alt="" /></a>
-							<h2>Leiam Clements Portfolio</h2>
-							<p>Aka <a href="http://wzqxrys.itch.io">Wzqxrys</a></p>
+							<div class="logo"><img src= "https://img.itch.zone/aW1nLzE5MTQ4MzcucG5n/original/URXSnG.png"></img></div>
+							<h2><a href="http://wzqxrys.itch.io">Wzqxrys</a></h2>
+							<p>aka Leiam Clements</p>
 						</div>
 					</section>
 
@@ -58,8 +58,8 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">MyTime - A Spectacle in Time</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<p>3D Platformer made in Gamemaker: Studio. The Clock is destroyed by Professor Tentacle. Help Ollie the crab find all the Time Fragments and restore order to Planet Perspective. <br /> How fast can you beat MyTime? Compete to get the Quickest Time or Highest score! </p>
+										<a href="http://wzqxrys.itch.io/mytime" class="special">Game Page</a>
 									</div>
 								</div>
 							</section>
@@ -164,7 +164,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Wzqxrys. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
