--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Wzqxrys</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -131,7 +131,8 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>Feel free to message me on any of my socials, Gmail, Twitter or Facebook.</p>
+							<!--
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -151,17 +152,11 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
+						-->
 							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-envelope">Wzqxrys@gmail.com</li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/wzqxrys">twitter.com/wzqxrys</a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://facebook.com/wzqxrys">facebook.com/wzqxrys</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>Wzqxrys. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
