--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <!--
-	Solid State by HTML5 UP
+	Adapted version of
+	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Wzqxrys Portfolio</title>
+		<title>WZQXRYS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,161 +15,276 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Wzqxrys</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro" class="content"><img src="images/mrwzqxrys_wo2.png" alt="" data-position="center right" /></a></li>
+							<li><a href="#one">Projects</a></li>
+							<li><a href="#two">Services</a></li>
+							<li><a href="#three">Resources</a></li>
+							<li><a href="#four">Contact</a></li>
+						</ul>
 					</nav>
+				</div>
+			</section>
 
-				<!-- Banner -->
-					<section id="banner">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Intro -->
+					<section id="intro" class="wrapper style0 fullscreen fade-up">
 						<div class="inner">
-							<div class="logo"><img src= "https://img.itch.zone/aW1nLzE5MTQ4MzcucG5n/original/URXSnG.png"></img></div>
-							<h2><a href="http://wzqxrys.itch.io">Wzqxrys</a></h2>
-							<p>aka Leiam Clements</p>
+							
+							<h1 class="wzq">
+								<span style='color: #eeeeee'>W</span>
+								<span style='color: #1111ee'>Z</span>
+								<span style='color: #ee11ee'>Q</span>
+								<span style='color: #ee1111'>X</span>
+								<span style='color: #eeee11'>R</span>
+								<span style='color: #11ee11'>Y</span>
+								<span style='color: #11eeee'>S</span>
+							</h1>
+							<p>
+								<span style='color: #dddddd'>
+								&OpenCurlyDoubleQuote;Wiz Quicks Za Rees&CloseCurlyDoubleQuote;<br/>
+								<br/>
+								</span>
+								<span style='color: #bbbbbb'>Indie Game Developer & Freelancer</span><br/>
+								<span style='color: #bbbbbb'>10+ Years' experience in Gamemaker</span><br/>
+							</p>
+
+							<ul class="actions">
+								<li><a href="about.html" class="button scrolly">About me</a></li>
+							</ul>
 						</div>
 					</section>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+				<!-- One -->
+					<section id="one" class="wrapper style1-alt spotlights">
+						<section>
+							<a href="projects.html" class="image fixed"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
+							<div class="content">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">MyTime - A Spectacle in Time</h2>
-										<p>3D Platformer made in Gamemaker: Studio. The Clock is destroyed by Professor Tentacle. Help Ollie the crab find all the Time Fragments and restore order to Planet Perspective. <br /> How fast can you beat MyTime? Compete to get the Quickest Time or Highest score! </p>
-										<a href="http://wzqxrys.itch.io/mytime" class="special">Game Page</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+									<h2>Twitch Chat Hex Strategy Game</h2>
+									<p><i>MyTime 2 Hex</i> is a cooperative turn-based game on hexagons. <br/> Played while streaming with twitch chat commands like !jump [HexID]</p>
+									<ul class="actions fit">
+										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
+										<li><a href="projects.html" class="button fit">Projects</a></li>
 									</ul>
 								</div>
-							</section>
-
+							</div>
+						</section>
+					</section>
+					<section id="one_2" class="wrapper style2-alt spotlights">
+						<section>
+							<a href="projects.html" class="image"><img src="images/mytime_slomo.gif" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>3D Platformer for Windows</h2>
+									<p>MyTime - A Spectacle in Time the 3D adventures of Catbox & Ollie. My First publically released game.</p>
+									<ul class="actions fit">
+										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
+										<li><a href="projects.html" class="button fit">Projects</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+					<section id="one_3" class="wrapper style3-alt spotlights">
+						<section>
+							<a href="projects.html" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Ludum Dare 46</h2>
+									<p>Lifeline - Music Generation Obstacle Dodge was made within 48 hours based on the theme "Keep it alive".</p>
+									<ul class="actions fit">
+										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
+										<li><a href="projects.html" class="button fit">Projects</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
-				<!-- Footer -->
-					<section id="footer">
+				<!-- Two -->
+					<section id="two" class="wrapper style0 fade-up">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Feel free to message me on any of my socials, Gmail, Twitter or Facebook.</p>
-							<!--
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
+							<h2>Services I offer</h2>
+							<p>From programming to testing your software for bugs, I offer a wide range of services. Contact me for a quote.</p>
+							<div class="features">
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-cog"></span>
+										<h3>Programming Systems</h3>
+										<p>Data management to mechanics I can build it for you or squeeze more frames improving the system you already have.</p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-drafting-compass"></span>
+										<h3>Game Design</h3>
+										<p>Designing and planning an achievable game from scratch or improving upon your ideas, we will make it work together.</p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-cube"></span>
+										<h3>3D Modelling</h3>
+										<p>Low to Mid poly modelling, UV unwrapping, texturing, rigging and animating for games, software, 3D marketing brands and icons.</p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-user"></span>
+										<h3>User Interface & Experience</h3>
+										<p>Visual layout, wireframes, prototypes and interaction design via keyboard, mouse, gamepads and android multitouch support.</p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-eye"></span>
+										<h3>Tutoring Gamemaker Studio</h3>
+										<p>Want to make games but struggling to finish? I'll help you personally get the edge you need with 1 on 1 private tutoring. </p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-photo-video"></span>
+										<h3>Image & Video Editing</h3>
+										<p>Image manipulation, gif creation, audio and video editing. I can handle all your basic & intermediate multimedia content needs.</p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon brands major fa-android"></span>
+										<h3>Android Games & Software</h3>
+										<p>Got an great idea? I can make it become a reality with my experience making mobile games and applications for android.</p>
+									</a>
+								</section>
+								<section>
+									<a href="services.html">
+										<span class="icon solid major fa-bug"></span>
+										<h3>Quality Assurance for your Software</h3>
+										<p>Thorough bug testing of your games and giving you an educated guess on how to solve them saving you time and money. </p>
+									</a>
+								</section>
+							</div>
+							<ul class="actions fit">
+								<li><a href="#four" class="button primary fit scrolly">Get a quote</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style2-alt spotlights">
+						<section>
+							<a href="resources.html" class="image fixed"><img src="images/resources-alejandro-escamilla.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Resources</h2>
+									<p>I've made a list of software and resources I use, <br/> including some free tools & assets for your projects.</p>
+									<ul class="actions">
+										<li><a href="resources.html" class="button primary">See Links</a></li> 
+									</ul>
 								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						-->
-							<ul class="contact">
-								<li class="icon solid fa-envelope">Wzqxrys@gmail.com</li>
-								<li class="icon brands fa-twitter"><a href="https://twitter.com/wzqxrys">twitter.com/wzqxrys</a></li>
-								<li class="icon brands fa-facebook-f"><a href="https://facebook.com/wzqxrys">facebook.com/wzqxrys</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>Wzqxrys. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+							</div>
+						</section>
+					</section>
+				<!-- Four -->
+					<section id="four" class="wrapper style0-alt fade-up">
+						<div class="inner">
+							<h2>Get in touch</h2>
+							<p>Interesting in my services or just want to say hi? Message me through any method below.</p>
+							<div class="split style1">
+								<section>
+									<form action="MAILTO:wzqxrys@gmail.com?subject=Website Form Submission" method="post" enctype="text/plain">
+										<div class="fields">
+											<div class="field half">
+												<label for="name">Name</label>
+												<input type="text" name="name" id="name" />
+											</div>
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
+											</div>
+											<div class="field">
+												<label for="subject">Subject</label>
+												<select name="subject" id="subject">
+													<option value="">- Subject -</option>
+													<option value="Programming">Programming</option>
+													<option value="Design">Design</option>
+													<option value="3D Modelling">3D Modelling</option>
+													<option value="UI/UX">UI/UX</option>
+													<option value="Tutoring">Tutoring</option>
+													<option value="Media Editing">Media Editing</option>
+													<option value="Android Apps">Android Apps</option>
+													<option value="QA Testing">QA Testing</option>
+													<option value="Other">Other</option>
+												</select>
+											</div>
+											<div class="field">
+												<label for="message">Message</label>
+												<textarea name="message" id="message" rows="5"></textarea>
+											</div>
+										</div>
+										<ul class="actions fit">
+											<li><input type="submit" value="Send Message" class="primary"/></li>
+											<li><input type="reset" value="Reset Fields" href="#four" class="scrolly"/></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Email</h3>
+												<a href="MAILTO:wzqxrys@gmail.com?subject=Website Direct Email"class="icon solid major fa-envelope"></a>
+												<p>wzqxrys@gmail.com</p>
+										</li>
+										<li>
+											<h3>Social</h3>
+											<ul class="icons">
+												<li><a href="https://discord.gg/nKdDHD2" class="icon brands major fa-discord"><span class="label">Discord</a></li>
+												<li><a href="https://twitter.com/wzqxrys" class="icon brands major fa-twitter"><span class="label">Twitter</a></li>
+												<li><a href="https://facebook.com/wzqxrys" class="icon brands major fa-facebook-f"><span class="label">Facebook</a></li>
+												<li><a href="https://instagram.com/wzqxrys" class="icon brands major fa-instagram"><span class="label">Instagram</a></li>
+											</ul>
+										</li>
+										<li>
+											<h3>Content</h3>
+											<ul class="icons">
+												<li><a href="https://wzqxrys.itch.io" class="icon brands major fa-itch-io"><span class="label">Itch</a></li>
+												<li><a href="https://www.youtube.com/channel/UCI_M_8acgAdFBGxw0t1GaNQ" class="icon brands major fa-youtube"><span class="label">Youtube</span></a></li>
+												<li><a href="https://twitch.com/wzqxrys" class="icon brands major fa-twitch"><span class="label">Twitch</a></li>
+												<li><a href="https://github.com/wzqxrys" class="icon brands major fa-github"><span class="label">Github</a></li>
+											</ul>
+										</li>
+									</ul>
+								</section>
+							</div>
 						</div>
 					</section>
 
 			</div>
 
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li><a href="index.html" class="button small">Home</a></li>
+						<li><a href="sitemap.html" class="button small">Sitemap</a></li>
+						<li><a href="index.html">&copy; WZQXRYS</a>. All rights reserved.</li>
+						<li>Adaption designed from: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="#intro" class="button small scrolly">Back to top</a></li>
+					</ul>
+				</div>
+			</footer>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
