refromatted and updated about page

--- a/about.html
+++ b/about.html
@@ -41,18 +41,53 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="top" class="wrapper style1-alt">
+					<section id="main" class="wrapper style1-alt">
 						<div class="inner">
 							<h1 class="major">About me</h1>
 							<span class="image fit"><img src="images/about.png" alt="" /></span>
 							<h3>WZQXRYS - A Representation of Space</h3>
-							<p>
-								I'm Leiam Clements an Indie Game Developer, Freelancer and the creator behind WZQXRYS.<br/>
-								Loving life in Australia with my wonderful partner and talented streamer <a href="https://twitter.com/Little_MissMika">Mika</a>. She is my muse, the inspiration and lifeblood of my inner flame.<br/>
-								<br/>
-								Like most of my content WZQXRYS started on the whiteboard. During the conversation about maths with my close friend <a href="https://twitter.com/jwrac">A Cloaked Figure</a> they asked. What would all those math concepts look like in a single picture? A storm of thoughts and sketches later the symbol you see today represents many things related to math and computer science while primarily being my personal brand for all the fine art and content I have and will create.
-							</p>
-						<!-- Projects -->
+							<section class="wrapper alt spotlights">
+								<section>
+									<div class="content">
+										<div class="inner">
+											<p>
+												I'm Leiam Clements an Indie Game Developer, Freelancer and the creator behind WZQXRYS.<br/>
+												Loving life in Australia with my wonderful partner and talented streamer <a href="https://twitter.com/Little_MissMika">Mika</a>.<br/>
+												She is my muse, the inspiration and lifeblood of my inner flame.<br/>
+												<br/>
+												Most of my projects just like WZQXRYS started on the whiteboard,<br/>
+												<a href="https://twitter.com/jwrac">A Cloaked Figure</a> and I were in a conversation about maths, they asked<br/>
+												<blockquote>&OpenCurlyDoubleQuote;What would all those math concepts look like in a single picture?&CloseCurlyDoubleQuote;</blockquote>
+											</p>
+										</div>
+									</div>
+								</section>
+							</section>
+							<section class="wrapper alt spotlights">
+								<section>
+									<a class="image"><img src="images/Sml_Mr_Wzqx.jpg" alt="" data-position="center center" /></a>
+								</section>
+							</section>
+							<section class="wrapper alt spotlights">
+								<section>
+									<div class="content">
+										<div class="inner">
+											<p>
+												A storm of thoughts and a kalidascope of sketches form the beginnings of Wzqxrys<br/>
+												<br/>
+												Each piece represents many things related to math and computer science<br/>
+												while primarily representing my brand of fine art I have and will create.
+											</p>
+										</div>
+									</div>	
+								</section>
+							</section>
+							<hr/>
+						</div>
+					</section>
+				<!-- Projects -->
+					<section id="extra" class="wrapper style1-alt">
+						<div class="inner">
 							<section id="one" class="wrapper style2-alt spotlights">
 								<section>
 									<a href="projects.html" class="image fixed"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
