Added Mytime2Hex Page
Tweeked image names, page links and buttons for some pages

--- a/about.html
+++ b/about.html
@@ -39,17 +39,16 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Main -->
-					<section id="main" class="wrapper style1-alt">
+					<section id="main" class="wrapper style1-alt fade-up">
 						<div class="inner">
 							<h1 class="major">About me</h1>
 							<span class="image fit"><img src="images/about.png" alt="" /></span>
-							<h3>WZQXRYS - A Representation of Space</h3>
 							<section class="wrapper alt spotlights">
 								<section>
 									<div class="content">
 										<div class="inner">
+											<h3>WZQXRYS - A Representation of Space</h3>
 											<p>
 												I'm Leiam Clements an Indie Game Developer, Freelancer and the creator behind WZQXRYS.<br/>
 												Loving life in Australia with my wonderful partner and talented streamer <a href="https://twitter.com/Little_MissMika">Mika</a>.<br/>
@@ -63,19 +62,26 @@
 									</div>
 								</section>
 							</section>
-							<section class="wrapper alt spotlights">
-								<section>
-									<a class="image"><img src="images/Sml_Mr_Wzqx.jpg" alt="" data-position="center center" /></a>
-								</section>
+							<section class="wrapper alt fade-up">
+								<div class="inner">
+									<section>
+										<div class="box alt">
+											<div class="row gtr-uniform">
+												<div class="row-2"><span class="image fit"><img src="images/Sml_Mr_Wzqx.jpg" alt="" /></span></div>
+												<div class="row-2"><span class="image fit"><img src="images/mrwzqxrys_wo3.png" alt="" /></span></div>
+											</div>
+										</div>
+									</section>
+								</div>
 							</section>
-							<section class="wrapper alt spotlights">
+							<section class="wrapper alt spotlights fade-up">
 								<section>
 									<div class="content">
 										<div class="inner">
 											<p>
 												A storm of thoughts and a kalidascope of sketches form the beginnings of Wzqxrys<br/>
 												<br/>
-												Each piece represents many things related to math and computer science<br/>
+												Each piece represents several things related to math and computer science<br/>
 												while primarily representing my brand of fine art I have and will create.
 											</p>
 										</div>
@@ -86,53 +92,39 @@
 						</div>
 					</section>
 				<!-- Projects -->
-					<section id="extra" class="wrapper style1-alt">
+					<section id="extra" class="wrapper style1-alt fade-left">
 						<div class="inner">
 							<section id="one" class="wrapper style2-alt spotlights">
 								<section>
-									<a href="projects.html" class="image fixed"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
+									<a href="projects.html#main" class="image fixed"><img src="images/mt2hex-mix.png" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Projects</h2>
 											<p>Games and software I've created including a twitch chat hex strategy game, a 3D platformer, a paint tool tutorial on youtube and more.</p>
 											<ul class="actions fit">
-												<li><a href="projects.html" class="button fit">See all projects</a></li>
+												<li><a href="projects.html#main" class="button fit">See all projects</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section class="wrapper style1 spotlights">
+							<section class="wrapper style1 spotlights fade-left">
 								<section>
-									<a href="services.html" class="image fixed"><img src="images/services-kevin-ku.jpg" alt="" data-position="center center" /></a>
+									<a href="services.html#main" class="image fixed"><img src="images/services-kevin-ku.jpg" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Services</h2>
 											<p>From programming to testing your software for bugs, I offer a wide range of services. Contact me for a quote.</p>
 											<ul class="actions fit">
-												<li><a href="services.html" class="button primary fit">See all Services</a></li> 
+												<li><a href="services.html#main" class="button primary fit">See all Services</a></li> 
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
 						</div>
-						<!-- Services
-							<section id="two" class="wrapper style1-alt spotlights">
-								<section>
-									<a href="services.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-									<div class="content">
-										<div class="inner">
-											<h2>Services</h2>
-											<p>Design to developement there are a range of services I offer to help you realise your projects and help your business. Click below to see more.</p>
-											<ul class="actions">
-												<li><a href="services.html" class="button scrolly">See all services</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-							</section>
-						-->
+					</section>
+				<!-- End -->
 			</div>
 
 		<!-- Footer -->
@@ -140,7 +132,7 @@
 				<div class="inner">
 					<ul class="menu">
 						<li><a href="index.html" class="button small">Home</a></li>
-						<li><a href="sitemap.html" class="button small">Sitemap</a></li>
+						<li><a href="sitemap.html#main" class="button small">Sitemap</a></li>
 						<li><a href="index.html">&copy; WZQXRYS</a>. All rights reserved.</li>
 						<li>Adaption designed from: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li><a href="#header" class="button small scrolly">Back to top</a></li>
