--- a/coming.html
+++ b/coming.html
@@ -54,7 +54,7 @@
 						<div class="inner">
 							<section class="wrapper style2-alt spotlights">
 								<section>
-									<a href="projects.html" class="image fixed"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
+									<a href="projects.html" class="image fixed"><img src="images/mt2hex-mix.png" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Projects</h2>
