--- a/services.html
+++ b/services.html
@@ -47,60 +47,44 @@
 							<p>From programming to testing your software for bugs, I offer a wide range of services. Contact me for a quote.</p>
 							<div class="features">
 								<section>
-									<a href="services.html">
-										<span class="icon solid major fa-cog"></span>
-										<h3>Programming Systems</h3>
-										<p>Data management to mechanics I can build it for you or squeeze more frames improving the system you already have.</p>
-									</a>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Programming Systems</h3>
+									<p>Data management to mechanics I can build it for you or squeeze more frames improving the system you already have.</p>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon solid major fa-drafting-compass"></span>
 										<h3>Game Design</h3>
 										<p>Designing and planning an achievable game from scratch or improving upon your ideas, we will make it work together.</p>
-									</a>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon solid major fa-cube"></span>
 										<h3>3D Modelling</h3>
 										<p>Low to Mid poly modelling, UV unwrapping, texturing, rigging and animating for games, software, 3D marketing brands and icons.</p>
-									</a>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon solid major fa-user"></span>
 										<h3>User Interface & Experience</h3>
 										<p>Visual layout, wireframes, prototypes and interaction design via keyboard, mouse, gamepads and android multitouch support.</p>
-									</a>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon solid major fa-eye"></span>
 										<h3>Tutoring Gamemaker Studio</h3>
 										<p>Want to make games but struggling to finish? I'll help you personally get the edge you need with 1 on 1 private tutoring. </p>
-									</a>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon solid major fa-photo-video"></span>
 										<h3>Image & Video Editing</h3>
 										<p>Image manipulation, gif creation, audio and video editing. I can handle all your basic & intermediate multimedia content needs.</p>
-									</a>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon brands major fa-android"></span>
 										<h3>Android Games & Software</h3>
 										<p>Got an great idea? I can make it become a reality with my experience making mobile games and applications for android.</p>
-									</a>
 								</section>
 								<section>
-									<a href="services.html">
 										<span class="icon solid major fa-bug"></span>
 										<h3>Quality Assurance for your Software</h3>
 										<p>Thorough bug testing of your games and giving you an educated guess on how to solve them saving you time and money. </p>
-									</a>
 								</section>
 							</div>
 							<ul class="actions fit">
@@ -188,7 +172,7 @@
 				<div class="inner">
 					<ul class="menu">
 						<li><a href="index.html" class="button small">Home</a></li>
-						<li><a href="sitemap.html" class="button small">Sitemap</a></li>
+						<li><a href="sitemap.html#main" class="button small">Sitemap</a></li>
 						<li><a href="index.html">&copy; WZQXRYS</a>. All rights reserved.</li>
 						<li>Adaption designed from: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li><a href="#header" class="button small scrolly">Back to top</a></li>
