--- a/sitemap.html
+++ b/sitemap.html
@@ -49,6 +49,7 @@
 							<h4><a href="about.html">About</a></h4>
 							<h4><a href="projects.html">Projects</a></h4>
 							<h4><a href="coming.html">Coming</a></h4>
+							<p><a href="mytime2hex.html">MyTime 2 Hex - Twitch Chat Game</a></p>
 						<!-- Project Pages
 							<ul>
 								<li><a href="mytime2hex.html">MyTime 2 Hex - Twitch Chat Game</a></li>
