--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</p>
 
 							<ul class="actions">
-								<li><a href="about.html" class="button scrolly">About me</a></li>
+								<li><a href="about.html#main" class="button scrolly">About me</a></li>
 							</ul>
 						</div>
 					</section>
@@ -64,14 +64,14 @@
 				<!-- One -->
 					<section id="one" class="wrapper style1-alt spotlights">
 						<section>
-							<a href="projects.html" class="image fixed"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
+							<a href="mytime2hex.html#main" class="image fixed"><img src="images/mt2hex-mix.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Twitch Chat Hex Strategy Game</h2>
-									<p><i>MyTime 2 Hex</i> is a cooperative turn-based game on hexagons. <br/> Played while streaming with twitch chat commands like !jump [HexID]</p>
+									<p><i>MyTime 2 Hex</i> is a cooperative turn-based game on hexagons. <br/> Played via twitch chat with commands like !jump</p>
 									<ul class="actions fit">
-										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
-										<li><a href="projects.html" class="button fit">Projects</a></li>
+										<li><a href="mytime2hex.html#main" class="button primary fit">Read more</a></li>
+										<li><a href="projects.html#main" class="button fit">Projects</a></li>
 									</ul>
 								</div>
 							</div>
@@ -79,14 +79,14 @@
 					</section>
 					<section id="one_2" class="wrapper style2-alt spotlights">
 						<section>
-							<a href="projects.html" class="image"><img src="images/mytime_slomo.gif" alt="" data-position="center center" /></a>
+							<a href="projects.html#two" class="image"><img src="images/mytime_slomo.gif" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>3D Platformer for Windows</h2>
 									<p>MyTime - A Spectacle in Time the 3D adventures of Catbox & Ollie. My First publically released game.</p>
 									<ul class="actions fit">
 										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
-										<li><a href="projects.html" class="button fit">Projects</a></li>
+										<li><a href="projects.html#main" class="button fit">Projects</a></li>
 									</ul>
 								</div>
 							</div>
@@ -94,14 +94,14 @@
 					</section>
 					<section id="one_3" class="wrapper style3-alt spotlights">
 						<section>
-							<a href="projects.html" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
+							<a href="projects.html#three" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ludum Dare 46</h2>
 									<p>Lifeline - Music Generation Obstacle Dodge was made within 48 hours based on the theme "Keep it alive".</p>
 									<ul class="actions fit">
 										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
-										<li><a href="projects.html" class="button fit">Projects</a></li>
+										<li><a href="projects.html#main" class="button fit">Projects</a></li>
 									</ul>
 								</div>
 							</div>
@@ -115,56 +115,56 @@
 							<p>From programming to testing your software for bugs, I offer a wide range of services. Contact me for a quote.</p>
 							<div class="features">
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-cog"></span>
 										<h3>Programming Systems</h3>
 										<p>Data management to mechanics I can build it for you or squeeze more frames improving the system you already have.</p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-drafting-compass"></span>
 										<h3>Game Design</h3>
 										<p>Designing and planning an achievable game from scratch or improving upon your ideas, we will make it work together.</p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-cube"></span>
 										<h3>3D Modelling</h3>
 										<p>Low to Mid poly modelling, UV unwrapping, texturing, rigging and animating for games, software, 3D marketing brands and icons.</p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-user"></span>
 										<h3>User Interface & Experience</h3>
 										<p>Visual layout, wireframes, prototypes and interaction design via keyboard, mouse, gamepads and android multitouch support.</p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-eye"></span>
 										<h3>Tutoring Gamemaker Studio</h3>
 										<p>Want to make games but struggling to finish? I'll help you personally get the edge you need with 1 on 1 private tutoring. </p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-photo-video"></span>
 										<h3>Image & Video Editing</h3>
 										<p>Image manipulation, gif creation, audio and video editing. I can handle all your basic & intermediate multimedia content needs.</p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon brands major fa-android"></span>
 										<h3>Android Games & Software</h3>
 										<p>Got an great idea? I can make it become a reality with my experience making mobile games and applications for android.</p>
 									</a>
 								</section>
 								<section>
-									<a href="services.html">
+									<a href="services.html#main">
 										<span class="icon solid major fa-bug"></span>
 										<h3>Quality Assurance for your Software</h3>
 										<p>Thorough bug testing of your games and giving you an educated guess on how to solve them saving you time and money. </p>
@@ -180,13 +180,13 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style2-alt spotlights">
 						<section>
-							<a href="resources.html" class="image fixed"><img src="images/resources-alejandro-escamilla.jpg" alt="" data-position="center center" /></a>
+							<a href="resources.html#main" class="image fixed"><img src="images/resources-alejandro-escamilla.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Resources</h2>
 									<p>I've made a list of software and resources I use, <br/> including some free tools & assets for your projects.</p>
 									<ul class="actions">
-										<li><a href="resources.html" class="button primary">See Links</a></li> 
+										<li><a href="resources.html#main" class="button primary">See Links</a></li> 
 									</ul>
 								</div>
 							</div>
@@ -273,11 +273,11 @@
 				<div class="inner">
 					<ul class="menu">
 						<li><a href="index.html" class="button small">Home</a></li>
-						<li><a href="sitemap.html" class="button small">Sitemap</a></li>
+						<li><a href="sitemap.html#main" class="button small">Sitemap</a></li>
 						<li><a href="index.html">&copy; WZQXRYS</a>. All rights reserved.</li>
 						<li>Adaption designed from: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li><a href="#intro" class="button small scrolly">Back to top</a></li>
-					</ul>
+					</ul>c
 				</div>
 			</footer>
 
