--- a/projects.html
+++ b/projects.html
@@ -46,113 +46,113 @@
 							<h1 class="major">Projects</h1>
 
 						<!-- Projects -->
-							<section id="one" class="wrapper alt spotlights">
+							<section id="one" class="wrapper alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image fixed"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
+									<a href="mytime2hex.html#main" class="image fixed"><img src="images/mt2hex-mix.png" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Twitch Chat Hex Strategy Game</h2>
-											<p><i>MyTime 2 Hex</i> is a cooperative turn-based game on hexagons. <br/> Played while streaming with twitch chat commands like !jump [HexID]</p>
+											<p><i>MyTime 2 Hex</i> is a cooperative turn-based game on hexagons. <br/> Played via twitch chat with commands like !jump</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="mytime2hex.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="two" class="wrapper style2-alt spotlights">
+							<section id="two" class="wrapper style2-alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/mytime_slomo.gif" alt="" data-position="center center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/mytime_slomo.gif" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>3D Platformer for Windows</h2>
 											<p>MyTime - A Spectacle in Time the 3D adventures of Catbox & Ollie. My First publically released game.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="three" class="wrapper style3-alt spotlights">
+							<section id="three" class="wrapper style3-alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Ludum Dare 46 - Game Jam</h2>
 											<p>Lifeline - Music Generation Obstacle Dodge was made within 48 hours based on the theme "Keep it alive".</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="four" class="wrapper alt spotlights">
+							<section id="four" class="wrapper alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/painttool.png" alt="" data-position="center center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/painttool.png" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Paint Tool - Tutorial</h2>
 											<p>Gamemaker Studio step by step tutorial on making your own paint tool explained in a 10 minute video with accompanying files.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="five" class="wrapper style2-alt spotlights">
+							<section id="five" class="wrapper style2-alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/Toebeanslots.gif" alt="" data-position="center center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/Toebeanslots.gif" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Toebean Slots - Stream Game</h2>
 											<p>Twitch currency game themed around my cats and their toebeans as the currency for Mika's streaming channel.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="six" class="wrapper style6-alt spotlights">
+							<section id="six" class="wrapper style6-alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/HeliosToHades.jpg" alt="" data-position="top center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/HeliosToHades.jpg" alt="" data-position="top center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Mobile Space Shooter</h2>
 											<p>Helios to Hades was my first attempt at making a mobile game for android devices.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="seven" class="wrapper alt spotlights">
+							<section id="seven" class="wrapper alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/contentviewer.gif" alt="" data-position="center center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/contentviewer.gif" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Android Content Viewer</h2>
 											<p>General purpose content viewer for Titles, Text, Images, Audio and Folder navigation for android.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section id="eight" class="wrapper style2-alt spotlights">
+							<section id="eight" class="wrapper style2-alt spotlights fade-up">
 								<section>
-									<a href="coming.html" class="image"><img src="images/treegen.png" alt="" data-position="center center" /></a>
+									<a href="coming.html#main" class="image"><img src="images/treegen.png" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>HTML5 Tree generator</h2>
 											<p>Procedurally generated trees running in a html5 web application.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html" class="button fit">Read more</a></li>
+												<li><a href="coming.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -163,29 +163,29 @@
 
 					<section id="extra" class="wrapper style1-alt">
 						<div class="inner">
-							<section class="wrapper style3-alt spotlights">
+							<section class="wrapper style3-alt spotlights fade-left">
 								<section>
-									<a href="resources.html" class="image"><img src="images/resources-alejandro-escamilla.jpg" alt="" data-position="center center" /></a>
+									<a href="resources.html#main" class="image"><img src="images/resources-alejandro-escamilla.jpg" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Resources</h2>
 											<p style='color: #bfbfbf'>I've made a list of software and resources I use, <br/> including some free tools & assets for your projects.</p>
 											<ul class="actions fit">
-												<li><a href="resources.html" class="button fit">See Links</a></li> 
+												<li><a href="resources.html#main" class="button fit">See Links</a></li> 
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
-							<section class="wrapper style1 spotlights">
+							<section class="wrapper style1 spotlights fade-left">
 								<section>
-									<a href="services.html" class="image fixed"><img src="images/services-kevin-ku.jpg" alt="" data-position="center center" /></a>
+									<a href="services.html#main" class="image fixed"><img src="images/services-kevin-ku.jpg" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Services</h2>
 											<p style='color: #bfbfbf'>From programming to testing your software for bugs, I offer a wide range of services. Contact me for a quote.</p>
 											<ul class="actions fit">
-												<li><a href="services.html" class="button primary fit">See all Services</a></li> 
+												<li><a href="services.html#main" class="button primary fit">See all Services</a></li> 
 											</ul>
 										</div>
 									</div>
@@ -200,7 +200,7 @@
 				<div class="inner">
 					<ul class="menu">
 						<li><a href="index.html" class="button small">Home</a></li>
-						<li><a href="sitemap.html" class="button small">Sitemap</a></li>
+						<li><a href="sitemap.html#main" class="button small">Sitemap</a></li>
 						<li><a href="index.html">&copy; WZQXRYS</a>. All rights reserved.</li>
 						<li>Adaption designed from: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li><a href="#header" class="button small scrolly">Back to top</a></li>
