--- a/resources.html
+++ b/resources.html
@@ -41,7 +41,7 @@
 			<div id="wrapper">
 
 			<!-- Main -->
-				<section id="main" class="wrapper style1-alt">
+				<section id="main" class="wrapper style1-alt fade-up">
 					<div class="inner">
 						<h1 class="major">Resources</h1>
 
@@ -166,11 +166,11 @@
 					</div>
 				</section>
 			
-				<section id="services" class="wrapper style1-alt">
+				<section id="services" class="wrapper style1-alt fade-left">
 					<div class="inner">
 						<section class="wrapper style2-alt spotlights">
 							<section>
-								<a href="projects.html" class="image"><img src="images/mytime2hex_mix.png" alt="" data-position="center center" /></a>
+								<a href="projects.html" class="image"><img src="images/mt2hex-mix.png" alt="" data-position="center center" /></a>
 								<div class="content">
 									<div class="inner">
 										<h2>Projects</h2>
@@ -182,7 +182,7 @@
 								</div>
 							</section>
 						</section>
-						<section class="wrapper style1 spotlights">
+						<section class="wrapper style1 spotlights fade-left">
 							<section>
 								<a href="services.html" class="image fixed"><img src="images/services-kevin-ku.jpg" alt="" data-position="center center" /></a>
 								<div class="content">
