Added 2 project pages
Lifeline and TreeGen added, adjusting MyTime2Hex, Projects, Sitemap and Index pages to link correctly to and from them.

--- a/about.html
+++ b/about.html
@@ -48,15 +48,19 @@
 								<section>
 									<div class="content">
 										<div class="inner">
-											<h3>WZQXRYS - A Representation of Space</h3>
+											
 											<p>
 												I'm Leiam Clements an Indie Game Developer, Freelancer and the creator behind WZQXRYS.<br/>
 												Loving life in Australia with my wonderful partner and talented streamer <a href="https://twitter.com/Little_MissMika">Mika</a>.<br/>
 												She is my muse, the inspiration and lifeblood of my inner flame.<br/>
-												<br/>
+											</p>
+
+											<h2>WZQXRYS - A Representation of Space</h2>
+											<p>
 												Most of my projects just like WZQXRYS started on the whiteboard,<br/>
-												<a href="https://twitter.com/jwrac">A Cloaked Figure</a> and I were in a conversation about maths, they asked<br/>
-												<blockquote>&OpenCurlyDoubleQuote;What would all those math concepts look like in a single picture?&CloseCurlyDoubleQuote;</blockquote>
+												<a href="https://twitter.com/jwrac">A Cloaked Figure</a> and I were in a conversation about coordinates, trigonometry, matrices and quaternions when they asked<br/>
+												<blockquote>&OpenCurlyDoubleQuote;What would all those math concepts look like in a single picture?&CloseCurlyDoubleQuote;</blockquote><br/>
+												A storm of thoughts and a kalidascope of sketches form the beginnings of Wzqxrys<br/>
 											</p>
 										</div>
 									</div>
@@ -79,8 +83,6 @@
 									<div class="content">
 										<div class="inner">
 											<p>
-												A storm of thoughts and a kalidascope of sketches form the beginnings of Wzqxrys<br/>
-												<br/>
 												Each piece represents several things related to math and computer science<br/>
 												while primarily representing my brand of fine art I have and will create.
 											</p>
