--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 							</div>
 						</section>
 					</section>
+					<!--
 					<section id="one_2" class="wrapper style2-alt spotlights">
 						<section>
 							<a href="projects.html#two" class="image"><img src="images/mytime_slomo.gif" alt="" data-position="center center" /></a>
@@ -85,22 +86,23 @@
 									<h2>3D Platformer for Windows</h2>
 									<p>MyTime - A Spectacle in Time the 3D adventures of Catbox & Ollie. My First publically released game.</p>
 									<ul class="actions fit">
-										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
+										<li><a href="coming.html" class="button primary fit">Read more</a></li>
 										<li><a href="projects.html#main" class="button fit">Projects</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 					</section>
+					-->
 					<section id="one_3" class="wrapper style3-alt spotlights">
 						<section>
-							<a href="projects.html#three" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
+							<a href="lifeline.html#main" class="image"><img src="images/lifeline-phase2.gif" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ludum Dare 46</h2>
 									<p>Lifeline - Music Generation Obstacle Dodge was made within 48 hours based on the theme "Keep it alive".</p>
 									<ul class="actions fit">
-										<!--<li><a href="coming.html" class="button primary fit">Read more</a></li>-->
+										<li><a href="lifeline.html#main" class="button primary fit">Read more</a></li>
 										<li><a href="projects.html#main" class="button fit">Projects</a></li>
 									</ul>
 								</div>
