--- a/mytime2hex.html
+++ b/mytime2hex.html
@@ -21,15 +21,15 @@
 				<nav>
 					<ul>
 						<li><a href="mytime2hex.html" class="active">MyTime2Hex</a></li>
-						<!--
-						<li><a href="mytime.html">MyTime</a></li>
+						<!--<li><a href="mytime.html">MyTime</a></li>-->
 						<li><a href="lifeline.html">Lifeline</a></li>
+						<!--
 						<li><a href="painttool.html">PaintTool</a></li>
 						<li><a href="slots.html">ToebeanSlots</a></li>
 						<li><a href="heliotohades.html">HeliostoHades</a></li>
 						<li><a href="contentviewer.html">ContentViewer</a></li>
-						<li><a href="treegen.html">TreeGen</a></li>
 						-->
+						<li><a href="treegen.html">TreeGen</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -68,6 +68,13 @@
 								a hex grid system and a turn system to handle the game state.
 							</p>
 							<br/>
+							<section>
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="row-2"><span class="image fit"><img src="images/mt2hex-players.png" alt="" /></span></div>
+									</div>
+								</div>
+							</section>
 							<h2>How it works</h2>
 							<p>
 								While game is connected live to the viewers wanting to play, they each type ‘!join’ adding them to the lobby, <br/>
@@ -81,7 +88,7 @@
 							<section>
 								<div class="box alt">
 									<div class="row gtr-uniform">
-										<div class="row-2"><span class="image fit"><img src="images/mt2hex-players.png" alt="" /></span></div>
+										<div class="row-2"><span class="image fit"><img src="images/mt2hex-latest.png" alt="" /></span></div>
 									</div>
 								</div>
 							</section>
@@ -91,19 +98,12 @@
 							<section>
 								<div class="box alt">
 									<div class="row gtr-uniform">
-										<div class="row-2"><span class="image fit"><img src="images/mt2hex-latest.png" alt="" /></span></div>
+										<div class="row-2"><span class="image fit"><img src="images/mt2hex-wb.jpg" alt="" /></span></div>
 									</div>
 								</div>
 							</section>
 							<h2>If I did it again?</h2>
 							<p>I would focus longer on bringing functionality and usability to the hex grid data management system.</p>
-							<section>
-								<div class="box alt">
-									<div class="row gtr-uniform">
-										<div class="row-2"><span class="image fit"><img src="images/mt2hex-wb.jpg" alt="" /></span></div>
-									</div>
-								</div>
-							</section>
 						</div>
 					</section>
 
