--- a/projects.html
+++ b/projects.html
@@ -76,13 +76,13 @@
 							</section>
 							<section id="three" class="wrapper style3-alt spotlights fade-up">
 								<section>
-									<a href="coming.html#main" class="image"><img src="images/LifeLine_005.gif" alt="" data-position="center center" /></a>
+									<a href="lifeline.html#main" class="image"><img src="images/lifeline-phase2.gif" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>Ludum Dare 46 - Game Jam</h2>
 											<p>Lifeline - Music Generation Obstacle Dodge was made within 48 hours based on the theme "Keep it alive".</p>
 											<ul class="actions fit">
-												<li><a href="coming.html#main" class="button fit">Read more</a></li>
+												<li><a href="lifeline.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -146,13 +146,13 @@
 							</section>
 							<section id="eight" class="wrapper style2-alt spotlights fade-up">
 								<section>
-									<a href="coming.html#main" class="image"><img src="images/treegen.png" alt="" data-position="center center" /></a>
+									<a href="treegen.html#main" class="image"><img src="images/treegen-phase3.png" alt="" data-position="center center" /></a>
 									<div class="content">
 										<div class="inner">
 											<h2>HTML5 Tree generator</h2>
-											<p>Procedurally generated trees running in a html5 web application.</p>
+											<p>Procedurally generated trees running in a HTML5 web application.</p>
 											<ul class="actions fit">
-												<li><a href="coming.html#main" class="button fit">Read more</a></li>
+												<li><a href="treegen.html#main" class="button fit">Read more</a></li>
 											</ul>
 										</div>
 									</div>
