--- a/sitemap.html
+++ b/sitemap.html
@@ -48,18 +48,19 @@
 							<h2><a href="index.html">Home</a></h2>
 							<h4><a href="about.html">About</a></h4>
 							<h4><a href="projects.html">Projects</a></h4>
-							<h4><a href="coming.html">Coming</a></h4>
-							<p><a href="mytime2hex.html">MyTime 2 Hex - Twitch Chat Game</a></p>
+							<p>
+								<a href="coming.html">Coming</a><br/>
+								<a href="mytime2hex.html">MyTime 2 Hex - Twitch Chat Game</a><br/>
+								<a href="lifeline.html">Lifeline - Music Generator Obsticle Dodge</a><br/>
+								<a href="treegen.html">TreeGen - Procedurally generated trees.</a>
+							</p>
 						<!-- Project Pages
-							<ul>
-								<li><a href="mytime2hex.html">MyTime 2 Hex - Twitch Chat Game</a></li>
+							<ul class="alt">
 								<li><a href="mytime.html">MyTime - A Spectacle in Time.</a></li>
-								<li><a href="lifeline.html">Lifeline - Music Generator Obsticle Dodge</a></li>
 								<li><a href="painttool.html">PaintTool - Video Gamemaker Tutorial.</a></li>
 								<li><a href="slots.html">Toebean Slots - Twitch Currency Game.</a></li>
 								<li><a href="heliotohades.html">Helios to Hades - Mobile Space Shooter.</a></li>
 								<li><a href="contentviewer.html">Content Viewer - Android software tool.</a></li>
-								<li><a href="treegen.html">TreeGen - Procedurally generated trees.</a></li>
 							</ul>
 						-->
 							<h4><a href="services.html">Services</a></h4>
