Added how to play to lifeline
Instructions on how to play with an image.

--- a/lifeline.html
+++ b/lifeline.html
@@ -43,6 +43,15 @@
 							<h1 class="major">Lifeline - Music Generator Obsticle Dodge</h1>
 							<p>Not designed for small devices below 960 x 560.</p>
 							<iframe class="image game" frameborder="0" src="https://itch.io/embed-upload/2151517?color=0a0a26" allowfullscreen="" width="960" height="560"><a href="https://wzqxrys.itch.io/lifeline-ludum-dare-46">Play LifeLine - Ludum Dare 46 on itch.io</a></iframe>				
+							<h2>How to play</h2>
+							<p>Click game window, press SPACE to start<br/>Press SPACE to jump, collect NOTES, speed up with BOOSTS, don't hit the red SPIKES, the yellow spikes in the background are your health.</p>
+							<section>
+								<div class="box alt">
+									<div class="row gtr-uniform">
+										<div class="row-2"><span class="image fit"><img src="images/lifeline-help.png" alt="" /></span></div>
+									</div>
+								</div>
+							</section>
 							<h2>Overview</h2>
 							<p>Lifeline – music generator obstacle dodge for HTML5. Made within 48 hours for a game jam with the theme “Keep it alive”.</p>
 							<br/>
